# traininglib

./: .gitignore  .gitmodules  DELETE.py  README.md  requirements.cpu.txt  requirements.frozen.txt  requirements.macosx.txt  run_tests.sh  setup.py  skel2path.DELETE.py
.github/workflows/: build.yml  tests.yml
cpp/: CMakeLists.txt  interface.cpp  miniz.cpp  miniz.hpp
cpp_TSinterface/: CMakeLists.txt  miniz.hpp
tests/: test_cpp.py  test_datalib.py  test_dataloader.py  test_flow.py  test_onnxlib.py  test_pathutils.py  test_segmentation.py  test_segmentationmodel.py  test_skeletonization.py  test_svg.py  test_torchscriptlib.py  test_unet.py  util.py
traininglib/: __init__.py  args.py  datalib.py  dataloader.py  flow.py  inference.py  modellib.py  onnxlib.py  torchscriptlib.py  trainingloop.py  trainingtask.py  ts_cpp_interface.py  unet.py  util.py
traininglib/paths/: pathdataset.py  pathutils.py  svg.py
traininglib/segmentation/: __init__.py  connectedcomponents.py  patchwisemodel.py  segmentationmodel.py  segmentationtraining.py  skeletonization.py
